auparse/ragel/auditd.go

//line auditd.go.rl:1
// Code generated by ragel DO NOT EDIT.
package ragel

import (
    "fmt"
    "strconv"
)


//line auditd.go.rl:175



//line auditd.go:17
const start int = 1
const first_final int = 75

const en_main int = 1
const en_user_msg_field int = 57
const en_field_value int = 127


//line auditd.go.rl:178

type machineType int

const (
    AuditdMessage machineType = iota
    UserMsg
    FieldValue
)

func (mt machineType) toState() int {
    switch mt {
    case AuditdMessage:
        return en_main
    case UserMsg:
        return en_user_msg_field
    case FieldValue:
        return en_field_value
    default:
        panic("unhanded type")
    }
}

// unpack unpacks an auditd message.
func (m *Message) unpack(data string) error {
    if err := unpack(data, AuditdMessage, m); err != nil {
        return err
    }
    if m.msgIndex == -1 {
        return nil
    }
    if err := unpack(m.Values[m.msgIndex].Value, UserMsg, m); err != nil {
        return fmt.Errorf("error parsing user msg %q: %w", m.Values[m.msgIndex].Value, err)
    }
    return nil
}

func unpack(data string, machine machineType, m *Message) error {
    p := 0
    pb := 0
    pe := len(data)
    eof := len(data)
    cs := machine.toState()

    var (
        auditHeaderEnd int
        key string
        value string
        hasValue bool
    )

    
//line auditd.go:78
	{
	}

//line auditd.go.rl:229
    
//line auditd.go:84
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 1:
		goto st_case_1
	case 0:
		goto st_case_0
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 75:
		goto st_case_75
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 76:
		goto st_case_76
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 77:
		goto st_case_77
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 101:
		goto st_case_101
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 102:
		goto st_case_102
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 103:
		goto st_case_103
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 125:
		goto st_case_125
	case 126:
		goto st_case_126
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 129:
		goto st_case_129
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 138:
		goto st_case_138
	case 139:
		goto st_case_139
	case 140:
		goto st_case_140
	case 141:
		goto st_case_141
	case 142:
		goto st_case_142
	case 143:
		goto st_case_143
	case 144:
		goto st_case_144
	case 145:
		goto st_case_145
	case 146:
		goto st_case_146
	case 147:
		goto st_case_147
	case 148:
		goto st_case_148
	case 149:
		goto st_case_149
	case 150:
		goto st_case_150
	case 151:
		goto st_case_151
	case 152:
		goto st_case_152
	}
	goto st_out
	st_case_1:
		switch data[p] {
		case 109:
			goto st2
		case 116:
			goto st36
		}
		goto st0
st_case_0:
	st0:
		cs = 0
		goto _out
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		if data[p] == 115 {
			goto st3
		}
		goto st0
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		if data[p] == 103 {
			goto st4
		}
		goto st0
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		if data[p] == 61 {
			goto st5
		}
		goto st0
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
		if data[p] == 97 {
			goto st6
		}
		goto st0
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		if data[p] == 117 {
			goto st7
		}
		goto st0
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		if data[p] == 100 {
			goto st8
		}
		goto st0
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
		if data[p] == 105 {
			goto st9
		}
		goto st0
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		if data[p] == 116 {
			goto st10
		}
		goto st0
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
		if data[p] == 40 {
			goto st11
		}
		goto st0
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		if 48 <= data[p] && data[p] <= 57 {
			goto tr12
		}
		goto st0
tr12:
//line auditd.go.rl:12

    pb = p

	goto st12
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
//line auditd.go:511
		if data[p] == 46 {
			goto st13
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto st12
		}
		goto st0
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
		if 48 <= data[p] && data[p] <= 57 {
			goto st14
		}
		goto st0
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		if 48 <= data[p] && data[p] <= 57 {
			goto st15
		}
		goto st0
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		if 48 <= data[p] && data[p] <= 57 {
			goto st16
		}
		goto st0
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
		if data[p] == 58 {
			goto tr18
		}
		goto st0
tr18:
//line auditd.go.rl:28

    m.Timestamp = string(data[pb:p])

	goto st17
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
//line auditd.go:566
		if 48 <= data[p] && data[p] <= 57 {
			goto tr19
		}
		goto st0
tr19:
//line auditd.go.rl:12

    pb = p

	goto st18
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
//line auditd.go:582
		if data[p] == 41 {
			goto tr20
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto st18
		}
		goto st0
tr20:
//line auditd.go.rl:32

    m.Sequence = string(data[pb:p])

	goto st19
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
//line auditd.go:601
		if data[p] == 58 {
			goto st20
		}
		goto st0
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
		if data[p] == 32 {
			goto st21
		}
		goto st0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		if data[p] == 32 {
			goto tr24
		}
		switch {
		case data[p] < 97:
			if 33 <= data[p] && data[p] <= 96 {
				goto tr25
			}
		case data[p] > 122:
			if 123 <= data[p] && data[p] <= 126 {
				goto tr25
			}
		default:
			goto tr26
		}
		goto st0
tr24:
//line auditd.go.rl:16

    auditHeaderEnd = p

//line auditd.go.rl:20

    m.Message = string(data[auditHeaderEnd:p])

	goto st22
tr27:
//line auditd.go.rl:20

    m.Message = string(data[auditHeaderEnd:p])

	goto st22
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
//line auditd.go:657
		if data[p] == 32 {
			goto tr27
		}
		switch {
		case data[p] < 97:
			if 33 <= data[p] && data[p] <= 96 {
				goto st23
			}
		case data[p] > 122:
			if 123 <= data[p] && data[p] <= 126 {
				goto st23
			}
		default:
			goto tr29
		}
		goto st0
tr25:
//line auditd.go.rl:16

    auditHeaderEnd = p

	goto st23
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
//line auditd.go:685
		if data[p] == 32 {
			goto tr27
		}
		if 33 <= data[p] && data[p] <= 126 {
			goto st23
		}
		goto st0
tr29:
//line auditd.go.rl:12

    pb = p

	goto st24
tr26:
//line auditd.go.rl:16

    auditHeaderEnd = p

//line auditd.go.rl:12

    pb = p

	goto st24
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
//line auditd.go:714
		switch data[p] {
		case 32:
			goto tr30
		case 45:
			goto st26
		case 95:
			goto st26
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st26
				}
			case data[p] >= 33:
				goto st23
			}
		case data[p] > 96:
			switch {
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st23
				}
			case data[p] >= 97:
				goto st26
			}
		default:
			goto st23
		}
		goto st0
tr30:
//line auditd.go.rl:20

    m.Message = string(data[auditHeaderEnd:p])

	goto st25
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
//line auditd.go:757
		switch data[p] {
		case 32:
			goto tr30
		case 45:
			goto st26
		case 61:
			goto tr32
		case 95:
			goto st26
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st26
				}
			case data[p] >= 33:
				goto st23
			}
		case data[p] > 96:
			switch {
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st23
				}
			case data[p] >= 97:
				goto tr33
			}
		default:
			goto st23
		}
		goto st0
tr33:
//line auditd.go.rl:12

    pb = p

	goto st26
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
//line auditd.go:802
		switch data[p] {
		case 32:
			goto tr30
		case 45:
			goto st26
		case 61:
			goto tr32
		case 95:
			goto st26
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto st26
				}
			case data[p] >= 33:
				goto st23
			}
		case data[p] > 96:
			switch {
			case data[p] > 122:
				if 123 <= data[p] && data[p] <= 126 {
					goto st23
				}
			case data[p] >= 97:
				goto st26
			}
		default:
			goto st23
		}
		goto st0
tr32:
//line auditd.go.rl:42

    key = string(data[pb:p])

	goto st75
	st75:
		if p++; p == pe {
			goto _test_eof75
		}
	st_case_75:
//line auditd.go:847
		switch data[p] {
		case 32:
			goto tr90
		case 34:
			goto st32
		case 39:
			goto st34
		case 44:
			goto tr94
		case 45:
			goto tr95
		}
		switch {
		case data[p] < 58:
			switch {
			case data[p] > 47:
				if 48 <= data[p] && data[p] <= 57 {
					goto tr96
				}
			case data[p] >= 33:
				goto tr91
			}
		case data[p] > 64:
			switch {
			case data[p] > 70:
				if 71 <= data[p] && data[p] <= 126 {
					goto tr91
				}
			case data[p] >= 65:
				goto tr97
			}
		default:
			goto tr91
		}
		goto st0
tr90:
//line auditd.go.rl:46

    if !hasValue {
        value = ""
    }

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st27
tr98:
//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st27
tr101:
//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st27
tr104:
//line auditd.go.rl:58

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st27
tr117:
//line auditd.go.rl:58

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:64

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st27
tr128:
//line auditd.go.rl:64

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st27
	st27:
		if p++; p == pe {
			goto _test_eof27
		}
	st_case_27:
//line auditd.go:1002
		switch data[p] {
		case 32:
			goto st27
		case 40:
			goto st28
		case 44:
			goto st29
		case 58:
			goto st29
		}
		if 97 <= data[p] && data[p] <= 122 {
			goto tr37
		}
		goto st0
	st28:
		if p++; p == pe {
			goto _test_eof28
		}
	st_case_28:
		switch data[p] {
		case 32:
			goto st27
		case 44:
			goto st29
		}
		if 97 <= data[p] && data[p] <= 122 {
			goto tr37
		}
		goto st0
tr102:
//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st29
	st29:
		if p++; p == pe {
			goto _test_eof29
		}
	st_case_29:
//line auditd.go:1047
		if data[p] == 32 {
			goto st28
		}
		goto st0
tr37:
//line auditd.go.rl:12

    pb = p

	goto st30
	st30:
		if p++; p == pe {
			goto _test_eof30
		}
	st_case_30:
//line auditd.go:1063
		switch data[p] {
		case 32:
			goto st31
		case 45:
			goto st31
		case 95:
			goto st31
		}
		switch {
		case data[p] > 57:
			if 97 <= data[p] && data[p] <= 122 {
				goto st31
			}
		case data[p] >= 48:
			goto st31
		}
		goto st0
	st31:
		if p++; p == pe {
			goto _test_eof31
		}
	st_case_31:
		switch data[p] {
		case 32:
			goto st31
		case 45:
			goto st31
		case 61:
			goto tr32
		case 95:
			goto st31
		}
		switch {
		case data[p] > 57:
			if 97 <= data[p] && data[p] <= 122 {
				goto st31
			}
		case data[p] >= 48:
			goto st31
		}
		goto st0
tr91:
//line auditd.go.rl:12

    pb = p

	goto st76
tr94:
//line auditd.go.rl:46

    if !hasValue {
        value = ""
    }

//line auditd.go.rl:12

    pb = p

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st76
tr100:
//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st76
tr105:
//line auditd.go.rl:58

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st76
tr118:
//line auditd.go.rl:58

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:64

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st76
tr129:
//line auditd.go.rl:64

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

//line auditd.go.rl:70

    if key == "msg" {
        m.msgIndex = len(m.Values)
    }
    m.Values = append(m.Values, KeyValue{key, value})
    value = ""

	goto st76
	st76:
		if p++; p == pe {
			goto _test_eof76
		}
	st_case_76:
//line auditd.go:1224
		switch data[p] {
		case 32:
			goto tr98
		case 33:
			goto st76
		case 44:
			goto tr100
		}
		switch {
		case data[p] > 38:
			if 40 <= data[p] && data[p] <= 126 {
				goto st76
			}
		case data[p] >= 35:
			goto st76
		}
		goto st0
	st32:
		if p++; p == pe {
			goto _test_eof32
		}
	st_case_32:
		if data[p] == 34 {
			goto tr40
		}
		if 32 <= data[p] && data[p] <= 126 {
			goto tr39
		}
		goto st0
tr39:
//line auditd.go.rl:12

    pb = p

	goto st33
	st33:
		if p++; p == pe {
			goto _test_eof33
		}
	st_case_33:
//line auditd.go:1265
		if data[p] == 34 {
			goto tr42
		}
		if 32 <= data[p] && data[p] <= 126 {
			goto st33
		}
		goto st0
tr40:
//line auditd.go.rl:12

    pb = p

//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

	goto st77
tr42:
//line auditd.go.rl:52

    if !hasValue {
        value = string(data[pb:p])
    }

	goto st77
	st77:
		if p++; p == pe {
			goto _test_eof77
		}
	st_case_77:
//line auditd.go:1298
		switch data[p] {
		case 32:
			goto tr101
		case 44:
			goto tr102
		}
		goto st0
	st34:
		if p++; p == pe {
			goto _test_eof34
		}
	st_case_34:
		if data[p] == 39 {
			goto tr40
		}
		if 32 <= data[p] && data[p] <= 126 {
			goto tr43
		}
		goto st0
tr43:
//line auditd.go.rl:12

    pb = p

	goto st35
	st35:
		if p++; p == pe {
			goto _test_eof35
		}
	st_case_35:
//line auditd.go:1329
		if data[p] == 39 {
			goto tr42
		}
		if 32 <= data[p] && data[p] <= 126 {
			goto st35
		}
		goto st0
tr95:
//line auditd.go.rl:12

    pb = p

	goto st78
	st78:
		if p++; p == pe {
			goto _test_eof78
		}
	st_case_78:
//line auditd.go:1348
		switch data[p] {
		case 32:
			goto tr98
		case 33:
			goto st76
		case 44:
			goto tr100
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st79
			}
		default:
			goto st76
		}
		goto st0
	st79:
		if p++; p == pe {
			goto _test_eof79
		}
	st_case_79:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st80
			}
		default:
			goto st76
		}
		goto st0
	st80:
		if p++; p == pe {
			goto _test_eof80
		}
	st_case_80:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st81
			}
		default:
			goto st76
		}
		goto st0
	st81:
		if p++; p == pe {
			goto _test_eof81
		}
	st_case_81:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st82
			}
		default:
			goto st76
		}
		goto st0
	st82:
		if p++; p == pe {
			goto _test_eof82
		}
	st_case_82:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st83
			}
		default:
			goto st76
		}
		goto st0
	st83:
		if p++; p == pe {
			goto _test_eof83
		}
	st_case_83:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st84
			}
		default:
			goto st76
		}
		goto st0
	st84:
		if p++; p == pe {
			goto _test_eof84
		}
	st_case_84:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st85
			}
		default:
			goto st76
		}
		goto st0
	st85:
		if p++; p == pe {
			goto _test_eof85
		}
	st_case_85:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st86
			}
		default:
			goto st76
		}
		goto st0
	st86:
		if p++; p == pe {
			goto _test_eof86
		}
	st_case_86:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st87
			}
		default:
			goto st76
		}
		goto st0
	st87:
		if p++; p == pe {
			goto _test_eof87
		}
	st_case_87:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] < 40:
			if 35 <= data[p] && data[p] <= 38 {
				goto st76
			}
		case data[p] > 47:
			switch {
			case data[p] > 57:
				if 58 <= data[p] && data[p] <= 126 {
					goto st76
				}
			case data[p] >= 48:
				goto st88
			}
		default:
			goto st76
		}
		goto st0
	st88:
		if p++; p == pe {
			goto _test_eof88
		}
	st_case_88:
		switch data[p] {
		case 32:
			goto tr104
		case 33:
			goto st76
		case 44:
			goto tr105
		}
		switch {
		case data[p] > 38:
			if 40 <= data[p] && data[p] <= 126 {
				goto st76
			}
		case data[p] >= 35:
			goto st76
		}
		goto st0
tr96:
//line auditd.go.rl:12

    pb = p
